# zpr-project

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  addHeaders.sh  doxygen.sh  tests.cmake  texture-concat.sh  textureConcat.sh  updateLibs.sh
docs/: __classdef_8h.html  __classdef_8h_source.html  _abs3_dobj_8h.html  _abs3_dobj_8h_source.html  _app_settings_8cc.html  _app_settings_8h.html  _app_settings_8h_source.html  _app_settings_8test_8cc.html  _back_worker_queue_8h.html  _block_8h.html  _block_8h_source.html  _brick_8cc.html  _brick_8h_source.html  _button_8cc.html  _button_8h.html  _button_8h_source.html  _camera_8h.html  _camera_8h_source.html  _chunk_8h.html  _chunk_8h_source.html  _chunk_generator_8h.html  _chunk_generator_8h_source.html  _chunk_loader_8h.html  _chunk_loader_8h_source.html  _chunk_renderer_8cc.html  _chunk_renderer_8h.html  _chunk_renderer_8h_source.html  _cobblestone_8h_source.html  _coord_8hpp.html  _coord_8hpp_source.html  _dirt_8cc.html  _dirt_8h_source.html  _engine_8h.html  _engine_8h_source.html  _exception_8hpp.html  _exception_8hpp_source.html  _factory_8h.html  _factory_8h_source.html  _factory_8test_8cc.html  _fps_counter_8h.html  (+352 more)
docs/html/: __classdef_8h_source.html  _abs3_dobj_8cc.html  _app_settings_8h_source.html  _back_worker_queue_8h_source.html  _back_worker_queue_8test_8cc.html  _block_8cc.html  _block_8h.html  _blocks_8h.html  _brick_8h.html  _button_8h.html  _camera_8h.html  _chunk_generator_8cc.html  _chunk_generator_8h.html  _chunk_loader_8h.html  _chunk_loader_8h_source.html  _chunk_renderer_8h.html  _chunk_renderer_8h_source.html  _cobblestone_8cc.html  _cobblestone_8h.html  _coord_8hpp.html  _coord_8hpp_source.html  _coord_8test_8cc.html  _dirt_8h.html  _dirt_8h_source.html  _exception_8hpp.html  _factory_8h.html  _fps_counter_8cc.html  _full_position_8h.html  _full_position_8test_8cc.html  _g_u_i_8h.html  _g_u_i_8h_source.html  _game_scene_8h_source.html  _grass_8h.html  _grass_8h_source.html  _gui_object_8cc.html  _gui_object_8h.html  _in_game_menu_8cc.html  _in_game_menu_8h.html  (+315 more)
src/: CMakeLists.txt  Exception.hpp  Logger.cc  Logger.h  MainWindow.cc  MainWindow.h  OpenGL.h  Vars.cc  Vars.h  _classdef.h  exception.h  logger.cpp  logger.h  main.cpp  main.test.cpp  mainWin.cpp  mainWin.h  opengl.h  types.h  vars.cpp  vars.h
src/block/: Block.cc  Block.h  Blocks.h  Factory.cc  Factory.h  Factory.test.cc  FullPosition.cc  FullPosition.cpp  FullPosition.h  FullPosition.test.cc  Solidblock.cc  Solidblock.cpp  Solidblock.h  Wall.cc  Wall.h  _classdef.h  block.cpp  block.h  fullPosition.cpp  fullPosition.h  solidblock.cpp  solidblock.h  type_ids.h  wall.cpp  wall.h
src/block/types/: Brick.cc  Brick.h  Cobblestone.cc  Cobblestone.h  Dirt.cc  Dirt.h  Grass.cc  Grass.h  Log.cc  Log.h  Sand.cc  Sand.h  Stone.cc  Stone.h  Water.cc  Water.h  Wood.cc  Wood.cpp  Wood.h  dirt.cpp  dirt.h  grass.cpp  grass.h  stone.cpp  stone.h  water.cpp  water.h
src/engine/: Abs3DObj.cpp  Abs3DObj.h  Abs3Dobj.cc  Abs3Dobj.h  Camera.cc  Camera.h  Engine.h  FpsCounter.cc  FpsCounter.h  InputButton.cc  InputButton.h  InputDevice.cc  InputDevice.h  InputInterface.cc  InputInterface.h  Keyboard.cc  Keyboard.h  Light.cc  Light.cpp  Light.h  Mouse.cc  Mouse.h  Point.cc  Point.hpp  Point3D.cpp  Resources.cc  Resources.h  Scene.cc  Scene.h  Shader.cc  Shader.h  ShaderProgram.cc  ShaderProgram.h  Sub3DObj.cc  Sub3DObj.h  Sub3DObj.test.cc  Sub3Dobj.cc  Sub3Dobj.h  Texture.cc  Texture.h  (+45 more)
src/func/: clip.h
src/game/: Game.h  GameScene.cc  GameScene.h  InGameMenu.cc  InGameMenu.h  MainGame.cc  MainGame.h  Player.cc  Player.h  PlayerInterface.cc  PlayerInterface.h  PlayerItem.cc  PlayerItem.h  SelectedBlock.cc  SelectedBlock.h  gameScene.cpp  gameScene.h  gameWin.cpp  gamescene.cpp  gamescene.h  gamewin.cpp  gamewin.h  inGameMenu.cpp  inGameMenu.h  mainGame.cpp  mainGame.h  player.cpp  player.h  playerInterface.cpp  playerInterface.h  playerItem.cpp  playerItem.h  selectedBlock.cpp  selectedBlock.h
src/gengine/: Abs3DObj.cpp  Abs3DObj.h  Animation.cpp  Animation.h  Camera.cpp  Camera.h  Light.h  Point3D.cpp  Point3D.h  Resources.cpp  Resources.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Window.cpp  Window.h  _classdef.h  exception.h  gEngine.h
src/gui/: Button.cc  Button.h  GUI.h  GuiObject.cc  GuiObject.h  Interface.cc  Interface.h  InterfaceShader.cc  InterfaceShader.h  RectangleObj.cc  RectangleObj.h  Text.cc  Text.h  TriButton.cc  TriButton.h  button.cpp  button.h  guiObj.cpp  guiObj.h  interface.cpp  interface.h  interfaceShader.cpp  interfaceShader.h  rectangleObj.cpp  rectangleObj.h  text.cpp  text.h
src/lib/: AppSettings.cc  AppSettings.h  AppSettings.test.cc  BackWorkerQueue.cc  BackWorkerQueue.h  BackWorkerQueue.test.cc  Coord.hpp  Coord.test.cc  LiveData.hpp  LiveData.test.cc  Object.cc  Object.h  Object.hpp  PerlinNoise.cc  PerlinNoise.h  SavableObject.cc  SavableObject.cpp  SavableObject.h  SavableObject.test.cc  SaveableObject.cpp  SaveableObject.h  Signal.hpp  Signal.test.cc  VirtualSharePtrObject.hpp  appSettings.cpp  appSettings.h  backWorkerQueue.cpp  backWorkerQueue.h  cfgpath.h  coord.h  fs.cpp  fs.h  glmEx.cpp  glmEx.h  json.hpp  jsonFile.cpp  jsonFile.h  object.cpp  object.h  perlin.cpp  (+4 more)
src/map/: Chunk.cc  Chunk.h  ChunkGenerator.cc  ChunkGenerator.h  ChunkLoader.cc  ChunkLoader.h  ChunkRenderer.cc  ChunkRenderer.h  Map.h  World.cc  World.h  WorldManager.cc  WorldManager.h  WorldManager.test.cc  WorldRenderer.cc  WorldRenderer.h  WorldShader.cc  WorldShader.h  _class.h  _classdef.h  chunk.cpp  chunk.h  chunkGenerator.cpp  chunkGenerator.h  chunkLoader.cpp  chunkLoader.h  chunkRenderer.cpp  chunkRenderer.h  chunkrenderer.cpp  chunkrenderer.h  map.cpp  map.h  renderer.cpp  renderer.h  world.cpp  world.h  worldRenderer.cpp  worldRenderer.h  worldShader.cpp  worldShader.h  (+2 more)
src/menu/: Menu.h  SettingsScene.cc  SettingsScene.h  WelcomeScene.cc  WelcomeScene.h  WorldsScene.cc  WorldsScene.h  mainMenu.cpp  mainMenu.h  settings.cpp  settings.h  welcome.cpp  welcome.h  worlds.cpp  worlds.h
test/: CMakeLists.txt
(+1359 files in other folders)
